# hen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
hen/: cli.py  core.py  pinned_repos.gql  rules.py
jg/hen/: cli.py  core.py  data.py  insights.py  models.py  pinned_repos.gql  rules.py  signals.py
jg/hen/insights/: bio.py  email.py  linkedin_url.py  location.py  projects.py
jg/hen/rules/: has_avatar.py  has_bio.py  has_linkedin.py  has_location.py  has_name.py  has_pinned_recent_repo.py  has_pinned_repo_with_description.py  has_profile_readme.py  has_some_pinned_repos.py
src/jg/hen/: cli.py  clients.py  core.py  data.py  lib.py  models.py  pinned_repos.gql  readme.py  signals.py
src/jg/hen/insights/: avatar_url.py  linkedin_url.py  name.py  projects.py
src/jg/hen/lib/: demo.py  readme.py
src/jg/hen/rules/: has_avatar.py  has_bio.py  has_email.py  has_linkedin.py  has_location.py  has_name.py  has_old_repo_archived.py  has_pinned_recent_repo.py  has_pinned_repo_with_images.py  has_pinned_repo_with_readme.py  has_pinned_repo_with_working_demo.py  has_pinned_repo_with_working_demo_url.py  has_pinned_repo_with_working_live_url.py  has_profile_readme.py  has_some_pinned_repos.py
tests/: conftest.py  test_core.py  test_core_fetch_demo.py  test_demo.py  test_insight_linkedin_url.py  test_lib.py  test_lib_demo.py  test_lib_readme.py  test_readme.py  test_rule_has_email.py  test_rule_has_linkedin.py  test_rule_has_pinned_repo_with_images.py
tests/fixtures/: mixed-img-readme.md  readme-relative-link.md  repo.json  user.json
