[tool.poetry]
name = "jg.hen"
version = "0.0"
description = "Automated GitHub profile review"
authors = ["Honza Javorek <honza@junior.guru>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://junior.guru/"
repository = "https://github.com/juniorguru/hen"
packages = [{ include = "jg" }]

[tool.poetry.scripts]
hen = "jg.hen.cli:main"

[tool.poetry.dependencies]
python = ">=3.11 <4.0"
click = "8.2.1"
blinker = "1.9.0"
githubkit = "0.13.1"
httpx = "0.28.1"
pillow = "11.3.0"
lxml = "6.0.0"
cssselect = "1.3.0"
pydantic = "2.11.7"
python-slugify = "^8.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-ruff = "0.5"
ruff = "0.12.*"
cookiecutter = "2.6.0"
pytest-asyncio = "1.1.0"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = "--import-mode=importlib --ff --ruff --ruff-format"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
extend-exclude = ["rule_template"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
