[project]
name = "jg.hen"
version = "0.0"
description = "Automated GitHub profile review"
readme = "README.md"
authors = [{name = "Honza Javorek", email = "honza@junior.guru"}]
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.13,<3.14"
dependencies = [
    "click>=8.3.2",
    "blinker>=1.9.0",
    "githubkit>=0.15.3",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "beautifulsoup4>=4.14.3",
    "pydantic>=2.13.0",
    "python-slugify>=8.0.4",
    "stamina>=26.1.0",
]

[project.urls]
homepage = "https://junior.guru/handbook/github-profile/"
repository = "https://github.com/juniorguru/hen/"

[project.scripts]
hen = "jg.hen.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-ruff>=0.5",
    "ruff>=0.15.10,<0.16.0",
    "cookiecutter>=2.7.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = "--import-mode=importlib --ff --ruff --ruff-format"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jg.hen"
